--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="icon" href="favicon.ico" sizes="any" />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div aria-hidden="true" class="decorated-element">rec</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -34,7 +45,172 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header-title">no focus</h1>
+      <h2 class="header-content title-decor">
+        Что делать, когда не можешь делать ничего<br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </h2>
     </header>
     <script src="./scripts/script.js"></script>
+    <main class="content content-section">
+      <section class="question content-section content_section">
+        <h2 class="content-section_title">Почему сосредоточиться так сложно</h2>
+        <div class="content text-block">
+          <h3 class="text-block_heading title-decor">Многозадачность</h3>
+          <p class="content paragraph">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи
+            <a
+              href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/"
+              class="link"
+              >выяснили</a
+            >, что мозгу тяжело концентрироваться даже на двух делах
+            одновременно. А когда в поле внимания попадает несколько важных
+            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+            устаём.
+          </p>
+          <h3 class="text-block_heading title-decor">Дофамин</h3>
+          <p class="content paragraph">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+            что-то более «приятное» для мозгов. Например, смотрим лайки в
+            соцсетях. В это время и выделяется дофамин — и мы чувствуем
+            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </p>
+        </div>
+      </section>
+      <section class="answer content-section content_section">
+        <h2 class="content-section_title">
+          Что снижает концентрацию внимания?
+        </h2>
+        <article class="content text-block answer_article-block">
+          <h3 class="text-block_heading title-decor">Многозадачность</h3>
+          <p class="content paragraph">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время
+            — невозможно. Концентрация — мышца, и она может не выдержать, если
+            не давать ей отдохнуть.
+          </p>
+          <h3 class="text-block_heading title-decor">Еда</h3>
+          <p class="content paragraph">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на «углеводные качели»: как только действие «быстрых углеводов»
+            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+            больше быстрых углеводов.
+          </p>
+          <h3 class="text-block_heading title-decor">Гаджеты</h3>
+          <p class="content paragraph">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+            утятами. В результате мозг пытается переключиться с одной задачи на
+            другую — и просто не может. А чтобы вернуться к состоянию полной
+            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
+            что чем больше времени мы проводим в гаджетах, тем больше времени
+            затем нужно, чтобы вернуться к работе.
+          </p>
+        </article>
+      </section>
+      <section class="advice content-section content_section">
+        <h2 class="content-section_title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <article class="text-block">
+          <h3 class="text-block_heading title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <div class="text-block_main-content">
+            <h4 class="text-block_subheading title-decor">
+              Представьте небо и облака
+            </h4>
+            <p class="content paragraph">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+            <h4 class="text-block_subheading title-decor">Включите музыку</h4>
+            <p class="content paragraph">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист в «белым шумом» или нейромузыкой.
+            </p>
+            <h4 class="text-block_subheading title-decor">Прогуляйтесь</h4>
+            <p class="content paragraph">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              показал, что созерцание природы повышает концентрацию, в то время
+              как после просмотра городских пейзажей она наоборот понижается.
+              Можно совместить прогулку с физическими упражнениями или бегом —
+              так в мозг поступит ещё больше кислорода и он будет лучше
+              работать. Но и простая двадцатиминутная прогулка — тоже отличный
+              вариант.
+            </p>
+            <h4 class="text-block_subheading title-decor">Хорошо ешьте</h4>
+            <p class="content paragraph">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+            <h4 class="text-block_subheading title-decor">Читайте</h4>
+            <p class="content paragraph">
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </div>
+        </article>
+      </section>
+    </main>
+    <div class="content-section content_selection grid">
+      <h3 class="text-block_heading title-decor">А можно в картинках?</h3>
+      <img
+        loading="lazy"
+        class="content__images-item content__images-item-first"
+        src="./images/sunset.png"
+        alt="Закат в горах, воздушные облака, летает стая птиц"
+      />
+      <img
+        loading="lazy"
+        class="content__images-item content__images-item-second"
+        src="./images/ice-cream.png"
+        alt="Несколько шариков мороженного в виде животных в тарелке под коктейльным зонтиком"
+      />
+      <img
+        loading="lazy"
+        class="content__images-item content__images-item-third"
+        src="./images/tape.png"
+        alt="Аудиокассета на фоне цифрового проигрывателя"
+      />
+      <img
+        loading="lazy"
+        class="content__images-item content__images-item-fourth"
+        src="./images/books.png"
+        alt="Чашка стоит на стопке книг"
+      />
+      <img
+        loading="lazy"
+        class="content__images-item content__images-item-fifth"
+        src="./images/street.png"
+        alt="Переулок в азиатском стиле с вывесками с иероглифами"
+      />
+    </div>
+    <footer class="footer decorated-zone">focus</footer>
   </body>
 </html>
