--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
-    <link rel="icon" href="favicon.ico" sizes="any" />
-    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="mobile-icon.png" />
+    <link rel="icon" href="../images/favicon.ico" sizes="any" />
+    <link rel="icon" href="../images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="../images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div aria-hidden="true" class="decorated-element">rec</div>
+      <span aria-hidden="true" class="decorated-element">rec</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -47,15 +47,14 @@
       </nav>
       <h1 class="header-title">no focus</h1>
       <h2 class="header-content title-decor">
-        Что делать, когда не можешь делать ничего<br />
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        Что делать, когда не можешь делать ничего<br />Или почему нам так сложно
+        сконцентрироваться, особенно когда очень надо
       </h2>
     </header>
-    <script src="./scripts/script.js"></script>
     <main class="content content-section">
       <section class="question content-section content_section">
         <h2 class="content-section_title">Почему сосредоточиться так сложно</h2>
-        <div class="content text-block">
+        <article class="article-question">
           <h3 class="text-block_heading title-decor">Многозадачность</h3>
           <p class="content paragraph">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -72,6 +71,8 @@
             стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
             устаём.
           </p>
+        </article>
+        <article class="article-question">
           <h3 class="text-block_heading title-decor">Дофамин</h3>
           <p class="content paragraph">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -83,7 +84,7 @@
             удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
             тем больше удовольствия получаешь.
           </p>
-        </div>
+        </article>
       </section>
       <section class="answer content-section content_section">
         <h2 class="content-section_title">
@@ -99,6 +100,8 @@
             — невозможно. Концентрация — мышца, и она может не выдержать, если
             не давать ей отдохнуть.
           </p>
+        </article>
+        <article class="content text-block answer_article-block">
           <h3 class="text-block_heading title-decor">Еда</h3>
           <p class="content paragraph">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -108,6 +111,8 @@
             заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
             больше быстрых углеводов.
           </p>
+        </article>
+        <article class="content text-block answer_article-block">
           <h3 class="text-block_heading title-decor">Гаджеты</h3>
           <p class="content paragraph">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -125,56 +130,61 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <article class="text-block">
-          <h3 class="text-block_heading title-decor">
-            5 простых (на самом деле не очень) советов
-          </h3>
-          <div class="text-block_main-content">
-            <h4 class="text-block_subheading title-decor">
-              Представьте небо и облака
-            </h4>
-            <p class="content paragraph">
-              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
-              как раз и мешают эти сложные задачи делать. В такие моменты можно
-              закрыть глаза и представить, что чистое небо — это вы, а облака —
-              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-              где-то там, за тучами, и никуда не денется. Это упражнение поможет
-              вернуться в настоящий момент, а не волноваться о потенциальных
-              проблемах из будущего.
-            </p>
-            <h4 class="text-block_subheading title-decor">Включите музыку</h4>
-            <p class="content paragraph">
-              Но не любую, и не любимую. Любимая может быть связана с сильными
-              положительными эмоциями, которые тоже очень сильно отвлекают.
-              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-              попробовать включить плейлист в «белым шумом» или нейромузыкой.
-            </p>
-            <h4 class="text-block_subheading title-decor">Прогуляйтесь</h4>
-            <p class="content paragraph">
-              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              показал, что созерцание природы повышает концентрацию, в то время
-              как после просмотра городских пейзажей она наоборот понижается.
-              Можно совместить прогулку с физическими упражнениями или бегом —
-              так в мозг поступит ещё больше кислорода и он будет лучше
-              работать. Но и простая двадцатиминутная прогулка — тоже отличный
-              вариант.
-            </p>
-            <h4 class="text-block_subheading title-decor">Хорошо ешьте</h4>
-            <p class="content paragraph">
-              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-              которые препятствуют резким скачкам сахара в крови. Например, с
-              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
-              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-            </p>
-            <h4 class="text-block_subheading title-decor">Читайте</h4>
-            <p class="content paragraph">
-              Настоящие бумажные книги. Это правда помогает с концентрацией:
-              чтобы прочитать пост в соцсети, достаточно нескольких минут или
-              даже секунд. А вот интересная книга способна затянуть и на
-              несколько часов и круто тренирует направленное внимание.
-            </p>
-          </div>
+        <h3 class="text-block_heading title-decor">
+          5 простых (на самом деле не очень) советов
+        </h3>
+        <article class="text-block_main-content">
+          <h4 class="text-block_subheading title-decor">
+            Представьте небо и облака
+          </h4>
+          <p class="content paragraph">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+            раз и мешают эти сложные задачи делать. В такие моменты можно
+            закрыть глаза и представить, что чистое небо — это вы, а облака —
+            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            где-то там, за тучами, и никуда не денется. Это упражнение поможет
+            вернуться в настоящий момент, а не волноваться о потенциальных
+            проблемах из будущего.
+          </p>
+        </article>
+        <article class="text-block_main-content">
+          <h4 class="text-block_subheading title-decor">Включите музыку</h4>
+          <p class="content paragraph">
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </article>
+        <article class="text-block_main-content">
+          <h4 class="text-block_subheading title-decor">Прогуляйтесь</h4>
+          <p class="content paragraph">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            показал, что созерцание природы повышает концентрацию, в то время
+            как после просмотра городских пейзажей она наоборот понижается.
+            Можно совместить прогулку с физическими упражнениями или бегом — так
+            в мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+            простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
+        </article>
+        <article class="text-block_main-content">
+          <h4 class="text-block_subheading title-decor">Хорошо ешьте</h4>
+          <p class="content paragraph">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
+            фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+        </article>
+        <article class="text-block_main-content">
+          <h4 class="text-block_subheading title-decor">Читайте</h4>
+          <p class="content paragraph">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
+            прочитать пост в соцсети, достаточно нескольких минут или даже
+            секунд. А вот интересная книга способна затянуть и на несколько
+            часов и круто тренирует направленное внимание.
+          </p>
         </article>
       </section>
     </main>
@@ -211,6 +221,9 @@
         alt="Переулок в азиатском стиле с вывесками с иероглифами"
       />
     </div>
-    <footer class="footer decorated-zone">focus</footer>
+    <footer>
+      <h2 class="footer decorated-zone">focus</h2>
+    </footer>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
