--- a/index.html
+++ b/index.html
@@ -161,10 +161,14 @@
           <h4 class="text-block_subheading title-decor">Прогуляйтесь</h4>
           <p class="content paragraph">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            показал, что созерцание природы повышает концентрацию, в то время
-            как после просмотра городских пейзажей она наоборот понижается.
-            Можно совместить прогулку с физическими упражнениями или бегом — так
-            в мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+            <a
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+              class="link"
+              >показал</a
+            >, что созерцание природы повышает концентрацию, в то время как
+            после просмотра городских пейзажей она наоборот понижается. Можно
+            совместить прогулку с физическими упражнениями или бегом — так в
+            мозг поступит ещё больше кислорода и он будет лучше работать. Но и
             простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
@@ -185,42 +189,41 @@
             секунд. А вот интересная книга способна затянуть и на несколько
             часов и круто тренирует направленное внимание.
           </p>
-        </article>
+      </section>
+      <section class="content-section content_selection grid">
+        <h3 class="text-block_heading title-decor">А можно в картинках?</h3>
+        <img
+          loading="lazy"
+          class="content__images-item content__images-item-first"
+          src="./images/sunset.png"
+          alt="Закат в горах, воздушные облака, летает стая птиц"
+        />
+        <img
+          loading="lazy"
+          class="content__images-item content__images-item-second"
+          src="./images/ice-cream.png"
+          alt="Несколько шариков мороженного в виде животных в тарелке под коктейльным зонтиком"
+        />
+        <img
+          loading="lazy"
+          class="content__images-item content__images-item-third"
+          src="./images/tape.png"
+          alt="Аудиокассета на фоне цифрового проигрывателя"
+        />
+        <img
+          loading="lazy"
+          class="content__images-item content__images-item-fourth"
+          src="./images/books.png"
+          alt="Чашка стоит на стопке книг"
+        />
+        <img
+          loading="lazy"
+          class="content__images-item content__images-item-fifth"
+          src="./images/street.png"
+          alt="Переулок в азиатском стиле с вывесками с иероглифами"
+        />
       </section>
     </main>
-    <div class="content-section content_selection grid">
-      <h3 class="text-block_heading title-decor">А можно в картинках?</h3>
-      <img
-        loading="lazy"
-        class="content__images-item content__images-item-first"
-        src="./images/sunset.png"
-        alt="Закат в горах, воздушные облака, летает стая птиц"
-      />
-      <img
-        loading="lazy"
-        class="content__images-item content__images-item-second"
-        src="./images/ice-cream.png"
-        alt="Несколько шариков мороженного в виде животных в тарелке под коктейльным зонтиком"
-      />
-      <img
-        loading="lazy"
-        class="content__images-item content__images-item-third"
-        src="./images/tape.png"
-        alt="Аудиокассета на фоне цифрового проигрывателя"
-      />
-      <img
-        loading="lazy"
-        class="content__images-item content__images-item-fourth"
-        src="./images/books.png"
-        alt="Чашка стоит на стопке книг"
-      />
-      <img
-        loading="lazy"
-        class="content__images-item content__images-item-fifth"
-        src="./images/street.png"
-        alt="Переулок в азиатском стиле с вывесками с иероглифами"
-      />
-    </div>
     <footer>
       <h2 class="footer decorated-zone">focus</h2>
     </footer>
