--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             секунд. А вот интересная книга способна затянуть и на несколько
             часов и круто тренирует направленное внимание.
           </p>
+        </article>
       </section>
       <section class="content-section content_selection grid">
         <h3 class="text-block_heading title-decor">А можно в картинках?</h3>
